--- a/ABOWUN/app/src/main/res/layout/item.xml
+++ b/ABOWUN/app/src/main/res/layout/item.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:onClick="toggleDetails"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true"
     >
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/relaltive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:orientation="vertical"
         >
 
         <ImageView
@@ -27,7 +33,7 @@
             android:id="@+id/c_name"
             android:layout_toRightOf="@+id/bird_photo"
             android:layout_alignParentTop="true"
-            android:textSize="30sp"
+            android:textSize="28sp"
             />
 
         <TextView
@@ -38,6 +44,22 @@
             android:layout_below="@+id/c_name"
             />
 
-    </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutDetails"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="8dp"
+            android:visibility="gone"
+            android:layout_alignParentTop="true">
+
+            <TextView
+                android:id="@+id/textViewInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp" />
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
