--- a/ABOWUN/app/src/main/res/layout/content_main.xml
+++ b/ABOWUN/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
-    <TextView android:text="Aplicacion de Prueba" android:layout_width="wrap_content"
+    <TextView android:text="Selecciona la foto de un ave y la clasificaremos para ti" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         android:textSize="24dp" />
